# plum-ems

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  90ff04ededb8_initial_schema_migration.py
app/: __init__.py  main.py
app/audit_log/: __init__.py  model.py
app/consumers/: __init__.py
app/consumers/handlers/: __init__.py  hold_release_handler.py  insurer_gateway_handler.py  ledger_handler.py  orchestrator_handler.py  smart_scheduler_handler.py
app/core/: __init__.py  database.py  dependencies.py  exception_handlers.py  exceptions.py  metrics.py
app/core/adapter/: __init__.py  base.py  kafka.py  mongo.py  mongo_base.py  postgres.py  postgres_base.py  redis.py  redis_base.py
app/core/base/: __init__.py  handlers.py  repository.py  service.py  validator.py
app/employee/: __init__.py  model.py  repository.py  schema.py
app/employer/: __init__.py  model.py  repository.py  schema.py
app/endorsement_request/: __init__.py  model.py  orchestrator.py  repository.py  schema.py  service.py
app/endpoints/: health.py  metrics.py
app/insurer_gateway/: __init__.py  service.py
app/ledger/: __init__.py  events.py  hold_release.py  pricing.py  schema.py  service.py
app/ledger_transaction/: __init__.py  model.py
app/policy_coverage/: __init__.py  model.py  repository.py  schema.py
app/schemas/: __init__.py  errors.py  pagination.py
app/utils/: id_generator.py  logger.py  request_id.py
docs/: 01-api-versioning.md  02-json-body-requests.md  03-error-handling.md  04-pagination.md  05-prometheus-metrics.md  06-structured-logging.md  07-testing-guidelines.md  08-code-structure.md  current-state.md  kafka-kraft-notes.md  requirement-specification.md  technical-specification.md
(+22 files in other folders)
